@@ -1,3 +1,8 @@
+2012-06-26 belangeo <belangeo@gmail.com>
+
+    * Added "offline_nb" mode to the Server, allowing non-blocking bounce to disk.
+    - rev 1004
+
 2012-06-13 belangeo <belangeo@gmail.com>
 
     * Fixed issue 34 : Better handling of type exceptions for arguments waiting for PyoObject, PyoTableObject or list.
